Se crea rest de file-store-api y se creo store-book-api con endponits de prueba en postman